--- a/src/main/webapp/resources/css/style_cadastro.css
+++ b/src/main/webapp/resources/css/style_cadastro.css
@@ -28,11 +28,16 @@ body{
     
     background-color: white;
     padding: 0px 0px 30px 0px;
+    margin-bottom: 80px;
 }
 
 .btn{
     background-color: rgb(0,173,239);
     color:white;
+   
+}
+.btnCadastro2{
+     margin-top: 10px;
 }
 .btn:hover{
     background-color: rgb(0,191,255);
@@ -42,7 +47,6 @@ body{
 .footer{
     background-color: rgb(0,173,239) !important;
     color:white;
-    
 }
 /*End*/
 
@@ -139,7 +143,7 @@ a,a:hover{
 .endereco{
     background-color: white;
     margin-right: 30px;
-    margin-left: 140px;
+    margin-left: 90px;
     padding-left: 30px;
 }
 
